Modernize string creation